# DeepLearning-BuildingSegmentation

./: .gitignore  README.md  README1.md  pyproject.toml  requirements.txt
code/: create_segment_data.py  main.py  train_main.py  train_run.py
code/Laxiang_old/: TESTmain.py  affnet_util.py  helper.py  run.ipynb
code/Laxiang_old/training/: model2_train.ipynb
code/Laxiang_trash/: duplication.py  floor_helper.py  model1.py  model2.py  run.sh  train_run.py
code/data/: README.md
code/deep_vitabuild/: __init__.py
code/deep_vitabuild/core/: config_utils.py  trainer.py
code/deep_vitabuild/core_delete/: config_utils.py
code/deep_vitabuild/model1/: __init__.py  floor_helper.py  image_projection.py  model1.py  swiss_to_gps_coordinates.py
code/deep_vitabuild/models/: __init__.py  detectron_utils.py  model1TEST.py  models_common.py
code/deep_vitabuild/procedures/: __init__.py  inferences_AL.py  inferences_detectron.py  (+2 more)
data/AL1_VALFINAL_A/: images_annotations_wrapped.json
data/AL_TEST/: images_annotations_wrapped.json
data/active-learning-loop-1/: data.json  listfile.txt  via_project_16Feb2021_13h17m.json  via_region_data.json
data/new_val/: images_annotations_imantics_wrapped.json  images_annotations_wrapped.json
data/reportLeverageImantics/: images_annotations_imantics_wrapped.json  images_annotations_wrapped.json
dataset/data_basel_images_pc/: dataset.md  segments_info.csv
experiments/: AL_Exp.yaml  detectronExperiment.yaml  experiment.yaml  experimentDetectron.yaml  week14resultsExperiment.yaml
files/ppt/: panorama_perspective_matching.pptx
(+8 files in other folders)
