[tool.poetry]
name = "buildings_segmentation_detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7.5"
pyyaml = "^5.1"
gdown = "^4.2.0"
torch = "~1.8.0"
torchvision = "~0.9.0"
torchaudio = "~0.8.0"
opencv-python = "^4.5.4"
ipykernel = "^6.5.0"
lightly = "^1.1.22"
easydict = "^1.9"
scikit-learn = "^1.0.1"
imantics = "^0.1.12"
rdp = "^0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
